fixed resize issue with multitouch on tablets

--- a/v3-max/public/draw-client.css
+++ b/v3-max/public/draw-client.css
@@ -4,14 +4,14 @@
   z-index: 10;
 }
 
-.pdfcanvas {
-    /*position: absolute;
-    left: 0px;
-    top: 0px;
-    height: 100%;
-    width: 100%;*/
-    z-index: 0;
-    /*border: solid black 1px*/;
+#touchdiv {
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 1px solid black;
+  width: 100vw;
+  height: 100vh;
+  z-index: 0;
 }
 
 #main {
@@ -20,8 +20,6 @@
   height: 100vh;
   width: 100vw;
 
-  transition: transform 1s linear;
-  -webkit-transition: transform 1s linear;
   /*border: solid red 1px;*/
 }
 
@@ -37,15 +35,18 @@
 
 html, body {
   /*background-color: black;*/
-  /*border: solid blue 1px; */
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  border: solid blue 1px;
   display: block;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: courier;
   font-size: 100%;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 
 }
 
